--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+  "plugins": ["prettier"],
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "prettier/prettier": "warn"
+  }
 }
