--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
+    "clsx": "^1.1.1",
+    "modularscale-sass": "^3.0.10",
     "next": "12.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.43.4",
+    "svgo-unique-id": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
