--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@svgr/webpack": "^5.5.0",
@@ -18,10 +19,29 @@
     "svgo-unique-id": "^1.0.0"
   },
   "devDependencies": {
+    "@p233/stylelint-config-scss": "^2.0.1",
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
+    "prettier": "^2.4.1",
+    "stylelint": "^13.13.1",
     "typescript": "4.4.4"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "bash -c tsc",
+      "eslint --fix --max-warnings 0"
+    ],
+    "!(package*).json": [
+      "prettier --write"
+    ],
+    "*.scss": [
+      "prettier --write",
+      "stylelint --fix"
+    ]
   }
 }
