--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "svgo-unique-id": "^1.0.0"
   },
   "devDependencies": {
-    "@p233/stylelint-config-scss": "^2.0.1",
+    "@p233/stylelint-config-scss": "^3.0.2",
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "eslint": "7.32.0",
@@ -29,7 +29,8 @@
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
-    "stylelint": "^13.13.1",
+    "stylelint": "^14.0.1",
+    "stylelint-config-css-modules": "^2.3.0",
     "typescript": "4.4.4"
   },
   "lint-staged": {
