--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,9 @@
   "extends": [
     "@p233/stylelint-config-scss",
     "@p233/stylelint-config-scss/order-bootstrap",
-    "stylelint-config-css-modules"
-  ]
+    "@p233/stylelint-config-scss/css-modules"
+  ],
+  "rules": {
+    "selector-class-pattern": null
+  }
 }
