--- a/package.json
+++ b/package.json
@@ -10,28 +10,27 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@svgr/webpack": "^5.5.0",
+    "@svgr/webpack": "^6.1.0",
     "clsx": "^1.1.1",
     "modularscale-sass": "^3.0.10",
-    "next": "12.0.3",
+    "next": "^12.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.4",
-    "svgo-unique-id": "^1.0.0"
+    "sass": "^1.44.0"
   },
   "devDependencies": {
     "@p233/stylelint-config-scss": "^3.1.1",
-    "@types/node": "16.11.7",
-    "@types/react": "17.0.34",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3",
+    "@types/node": "^16.11.11",
+    "@types/react": "^17.0.37",
+    "eslint": "^8.4.0",
+    "eslint-config-next": "^12.0.6",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
+    "lint-staged": "^12.1.2",
     "postcss-scss": "^4.0.2",
-    "prettier": "^2.4.1",
-    "stylelint": "^14.0.1",
-    "typescript": "4.4.4"
+    "prettier": "^2.5.1",
+    "stylelint": "^14.1.0",
+    "typescript": "^4.5.2"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
