--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@svgr/webpack": "^6.1.2",
+    "@svgr/webpack": "^6.2.1",
     "clsx": "^1.1.1",
     "modularscale-sass": "^3.0.10",
-    "next": "^12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.49.9"
+    "next": "^12.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "sass": "^1.50.1"
   },
   "devDependencies": {
     "@p233/stylelint-config-scss": "^3.1.1",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.38",
-    "eslint": "^8.10.0",
-    "eslint-config-next": "^12.1.0",
+    "@types/node": "^17.0.25",
+    "@types/react": "^18.0.6",
+    "eslint": "^8.14.0",
+    "eslint-config-next": "^12.1.5",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.4",
-    "postcss-scss": "^4.0.2",
-    "prettier": "^2.5.1",
-    "stylelint": "^14.5.3",
-    "typescript": "^4.6.2"
+    "lint-staged": "^12.4.0",
+    "postcss-scss": "^4.0.3",
+    "prettier": "^2.6.2",
+    "stylelint": "^14.7.1",
+    "typescript": "^4.5.5"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
