--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@svgr/webpack": "^6.2.1",
-    "clsx": "^1.1.1",
+    "@svgr/webpack": "^6.5.0",
+    "clsx": "^1.2.1",
     "modularscale-sass": "^3.0.10",
-    "next": "^12.2.0",
+    "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.53.0"
+    "sass": "^1.55.0"
   },
   "devDependencies": {
-    "@p233/stylelint-config-scss": "^3.1.1",
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "eslint": "^8.19.0",
-    "eslint-config-next": "^12.2.0",
+    "@p233/stylelint-config-scss": "^3.2.1",
+    "@types/node": "^18.11.0",
+    "@types/react": "^18.0.21",
+    "eslint": "^8.25.0",
+    "eslint-config-next": "^12.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "postcss-scss": "^4.0.4",
+    "postcss": "^8.4.18",
+    "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
-    "stylelint": "^14.9.1",
-    "typescript": "^4.7.4"
+    "stylelint": "^14.13.0",
+    "typescript": "^4.8.4"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
