--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "dependencies": {
     "@svgr/webpack": "^6.5.0",
     "clsx": "^1.2.1",
-    "next": "^12.3.1",
+    "next": "13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.55.0"
   },
   "devDependencies": {
     "@p233/stylelint-config-scss": "^3.2.1",
-    "@types/node": "^18.11.2",
-    "@types/react": "^18.0.21",
-    "eslint": "^8.25.0",
-    "eslint-config-next": "^12.3.1",
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.23",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "13.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
