--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,3 @@
 {
-  "extends": [
-    "@p233/stylelint-config-scss",
-    "@p233/stylelint-config-scss/order-bootstrap",
-    "@p233/stylelint-config-scss/css-modules"
-  ]
+  "extends": ["@p233/stylelint-config-scss", "@p233/stylelint-config-scss/css-modules"]
 }
