--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "plugins": ["prettier"],
-  "extends": "next/core-web-vitals",
+  "extends": ["plugin:@typescript-eslint/recommended", "next/core-web-vitals"],
   "rules": {
     "prettier/prettier": "warn"
   }
