--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
     "clsx": "^2.0.0",
     "next": "13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.66.1"
+    "sass": "^1.67.0"
   },
   "devDependencies": {
     "@p233/stylelint-config-scss": "^4.0.0",
-    "@types/node": "^20.5.9",
+    "@types/node": "^20.6.2",
     "@types/react": "^18.2.21",
-    "eslint": "^8.48.0",
+    "eslint": "^8.49.0",
     "eslint-config-next": "13.4.19",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "postcss": "^8.4.29",
-    "postcss-scss": "^4.0.7",
+    "postcss-scss": "^4.0.8",
     "prettier": "^3.0.3",
     "stylelint": "^15.10.3",
     "typescript": "^5.2.2"
