--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.0.15",
     "@svgr/webpack": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "clsx": "^2.0.0",
