--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@svgr/webpack": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "clsx": "^2.0.0",
+    "ms-sass": "^1.0.0",
     "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
